index darkhorse death

--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -592,7 +592,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../AleisterAndAdolf/AleisterAndAdolf.html">Aleister &amp; Adolf</a> (2016)
 <li><a href="Darkhorse367.jpg">Alena</a> (2016)
 <li><a href="../AliceInSunderland/AliceInSunderland.html">Alice in Sunderland</a> (2007)
-<li><a href="../Alien3/Alien3.html">Alien3</a> (1992)
+<li><a href="../Alien3/Alien3.html">Alien 3</a> (1992)
 <li><a href="Darkhorse4.jpg">Alien Resurrection</a> (1997)
 <li><a href="Darkhorse5.jpg">Alien vs. Predator: Civilized Beasts</a> (2008)
 <li><a href="Darkhorse6.jpg">Alien vs. Predator: Fire and Stone</a>  (2014)
@@ -705,7 +705,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../BatmanHellboyStarman/BatmanHellboyStarman.html">Batman/Hellboy/Starman</a> (1999)
 <li><a href="../BatmanTarzan/BatmanTarzan.html">Batman/Tarzan: Claws Of The Cat-Woman</a> (1999)
 <li><a href="Darkhorse48.jpg">Battle Gods: Warriors Of The Chaak</a> (2000)
-<li><a href="Darkhorse381.jpg">Battlepub</a> (2012)
+<li><a href="Darkhorse381.jpg">Battlepug</a> (2012)
 <li><a href="Darkhorse382.jpg">Beanworld Omnibus</a> (2018)
 <li><a href="../BeastsOfBurden/BeastsOfBurden.html">Beasts Of Burden</a> (2009)
 <li><a href="Darkhorse383.jpg">Bedtime Games</a> (2018)
@@ -724,6 +724,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../BillyKidOldTimey/BillyKidOldTimey.html">Billy The Kid's Old Timey Oddities</a> (2005)
 <li><a href="Darkhorse388.jpg">Bird: The Tattoo</a> (2001)
 <li><a href="../BlackBeetle/BlackBeetle.html">Black Beetle</a> (2013)
+<li><a href="../BlackCross/BlackCross.html">Black Cross</a> (1988)
 <li><a href="Darkhorse54.jpg">Black Cross: Dirty Work</a> (1997)
 <li><a href="../BlackHammer/BlackHammer.html">Black Hammer</a> (2016)
 <li><a href="../Blacksad/Blacksad.html">Black Sad</a> (2010)
