--- a/index.html
+++ b/index.html
@@ -3927,6 +3927,14 @@
 </tr>
 
 <tr>
+<td>Alice 3</td>
+<td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+
+<tr>
 <td>Alien Ducklings</td>
 <td>1986</td>
 <td>Blackthorne</td>
@@ -9609,6 +9617,13 @@
 </tr>
 
 <tr>
+<td>Bang!</td>
+<td>2020</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bank Street Book Of Creepy Tales</td>
 <td>1989</td>
 <td>Pocket Books</td>
@@ -9627,6 +9642,13 @@
 <td>1989</td>
 <td>Pocket Books</td>
 <td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bankshot</td>
+<td>2017</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9668,6 +9690,13 @@
 <td>1967</td>
 <td>Topps</td>
 <td><a href="Topps/Topps.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Banya: The Explosive Delivery Man</td>
+<td>2006</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9937,6 +9966,13 @@
 </tr>
 
 <tr>
+<td>Basil Wolverton's Fantastic Fables</td>
+<td>1993</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Basil Wolverton's Gateway to Horror</td>
 <td>1988</td>
 <td>Dark Horse</td>
@@ -10070,21 +10106,21 @@
 </tr>
 
 <tr>
-<td>Batman versus Predator</td>
+<td>Batman Versus Predator</td>
 <td>1991</td>
 <td>Dark Horse</td>
 <td><a href="BatmanVsPredator/BatmanVsPredator.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Batman versus Predator II</td>
+<td>Batman Versus Predator II</td>
 <td>1992</td>
 <td>Dark Horse</td>
 <td><a href="BatmanVsPredatorII/BatmanVsPredatorII.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Batman versus Predator III</td>
+<td>Batman Versus Predator III</td>
 <td>1997</td>
 <td>Dark Horse</td>
 <td><a href="BatmanVsPredatorIII/BatmanVsPredatorIII.html">Details</a></td>
@@ -11028,6 +11064,13 @@
 </tr>
 
 <tr>
+<td>Berserker Unbound</td>
+<td>2019</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Berserkers</td>
 <td>1995</td>
 <td>Image</td>
@@ -11165,6 +11208,13 @@
 <td>2017</td>
 <td>Abrams</td>
 <td><a href="BestWeCouldDo/BestWeCouldDo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Best Wishes</td>
+<td>2017</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11525,6 +11575,13 @@
 </tr>
 
 <tr>
+<td>Big Damn Hard Boiled</td>
+<td>1997</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Big Dog Funnies</td>
 <td>1992</td>
 <td>Rip Off</td>
@@ -11578,6 +11635,13 @@
 <td>2003</td>
 <td>Publisher</td>
 <td><a href="BigHeadPress/BigHeadPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Big Hoax</td>
+<td>2001</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11987,6 +12051,13 @@
 </tr>
 
 <tr>
+<td>Bird: The Tattoo</td>
+<td>2001</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Birdland</td>
 <td>1990</td>
 <td>Fantagraphics</td>
@@ -12278,6 +12349,13 @@
 <td>1988</td>
 <td>Dark Horse</td>
 <td><a href="BlackCross/BlackCross.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Cross: Dirty Work</td>
+<td>1997</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13088,6 +13166,13 @@
 </tr>
 
 <tr>
+<td>Blessed Thistle</td>
+<td>2007</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blindside</td>
 <td>1996</td>
 <td>Image</td>
@@ -13225,6 +13310,13 @@
 <td>1988</td>
 <td>Eternity</td>
 <td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blood Brothers</td>
+<td>2013</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13634,6 +13726,13 @@
 </tr>
 
 <tr>
+<td>Blue Witch Of Oz</td>
+<td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bluebeard</td>
 <td>1993</td>
 <td>Slave Labor</td>
@@ -13731,6 +13830,20 @@
 </tr>
 
 <tr>
+<td>Bob Powell's Complete Cave Girl</td>
+<td>2014</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bob Powell's Complete Jet Powers</td>
+<td>2015</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bob Powell's Timeless Tales</td>
 <td>1989</td>
 <td>Eclipse</td>
@@ -13756,6 +13869,13 @@
 <td>2014</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Boba Fett: Salvage</td>
+<td>1997</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14263,10 +14383,24 @@
 </tr>
 
 <tr>
+<td>Borgias</td>
+<td>2014</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Boris Artzybasheff</td>
 <td>1899</td>
 <td>Creator</td>
 <td><a href="BorisArtzybasheff/BorisArtzybasheff.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Boris Karloff Tales Of Mystery Archive</td>
+<td>2009</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14351,6 +14485,13 @@
 <td>2017</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="Boundless/Boundless.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bounty</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14624,6 +14765,13 @@
 <td>1995</td>
 <td>Slave Labor</td>
 <td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Breath Of Bones: A Tale Of The Golm</td>
+<td>2013</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14970,6 +15118,13 @@
 </tr>
 
 <tr>
+<td>Briggs Land</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Brik Hauss</td>
 <td>1987</td>
 <td>Blackthorne</td>
@@ -15121,6 +15276,13 @@
 <td>1972</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brothers Of The Spear Archives</td>
+<td>2012</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15380,6 +15542,13 @@
 <td>1997</td>
 <td>WB</td>
 <td><a href="BuffyTheVampireSlayer/BuffyTheVampireSlayer.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Buffy The Vampire Slayer</td>
+<td>2002</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15726,10 +15895,31 @@
 </tr>
 
 <tr>
+<td>Buzzard</td>
+<td>2010</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Buzzbomb</td>
 <td>1987</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Buzzkill</td>
+<td>2013</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>By Bizarre Hands</td>
+<td>1994</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15947,6 +16137,13 @@
 <td>2003</td>
 <td>Activision</td>
 <td><a href="CallOfDuty/CallOfDuty.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Call Of Duty</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16619,6 +16816,13 @@
 <td>1571</td>
 <td>Creator</td>
 <td><a href="Caravaggio/Caravaggio.html">Details</a><td>
+</tr>
+
+<tr>
+<td>Caravaggio</td>
+<td>2017</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17868,6 +18072,13 @@
 </tr>
 
 <tr>
+<td>Channel Zero</td>
+<td>2012</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Charismagic</td>
 <td>2011</td>
 <td>Aspen</td>
@@ -18392,6 +18603,13 @@
 </tr>
 
 <tr>
+<td>Chimichanga</td>
+<td>2011</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Chimney25</td>
 <td>2003</td>
 <td>Slave Labor</td>
@@ -18636,6 +18854,13 @@
 </tr>
 
 <tr>
+<td>Chunchu</td>
+<td>2007</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Chyna</td>
 <td>2000</td>
 <td>Chaos!</td>
@@ -18731,6 +18956,13 @@
 <td>2015</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Citizen Rex</td>
+<td>2009</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19000,6 +19232,13 @@
 </tr>
 
 <tr>
+<td>Cleaners</td>
+<td>2008</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Clerks</td>
 <td>1999</td>
 <td>Oni</td>
@@ -19175,6 +19414,13 @@
 </tr>
 
 <tr>
+<td>Clonezone</td>
+<td>1989</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Close Shaves Of Pauline Peril</td>
 <td>1970</td>
 <td>Gold Key</td>
@@ -19203,10 +19449,24 @@
 </tr>
 
 <tr>
+<td>Clown Fatale</td>
+<td>2013</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Clown: Nobody's Laughing Now</td>
 <td>1993</td>
 <td>Fleetway Quality</td>
 <td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Clowns</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19580,6 +19840,13 @@
 </tr>
 
 <tr>
+<td>Color Of Rage</td>
+<td>2008</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Colorful Monsters</td>
 <td>2017</td>
 <td>Drawn &amp; Quarterly</td>
@@ -19589,6 +19856,13 @@
 <tr>
 <td>Colors In Black</td>
 <td>1995</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Colossal Conan</td>
+<td>2013</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
@@ -19619,6 +19893,13 @@
 <td>1924</td>
 <td>Publisher</td>
 <td><a href="ColumbiaPictures/ColumbiaPictures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Columbus</td>
+<td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19703,6 +19984,13 @@
 <td>2002</td>
 <td>Comic Art</td>
 <td><a href="ComicArt/ComicArt.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comic Book</td>
+<td>1996</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19811,6 +20099,13 @@
 </tr>
 
 <tr>
+<td>Comics And Stories</td>
+<td>1996</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comics Before 1945</td>
 <td>2004</td>
 <td>Abrams</td>
@@ -19829,13 +20124,6 @@
 <td>1989</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Comics: George Carlin</td>
-<td>2011</td>
-<td>Tidalwave</td>
-<td><a href="Tidalwave/Tidalwave.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19892,6 +20180,13 @@
 <td>1979</td>
 <td>King Features</td>
 <td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comics: George Carlin</td>
+<td>2011</td>
+<td>Tidalwave</td>
+<td><a href="Tidalwave/Tidalwave.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20063,6 +20358,13 @@
 </tr>
 
 <tr>
+<td>Complete Elfquest</td>
+<td>2014</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Complete Freak Brothers</td>
 <td>2001</td>
 <td>Knockabout</td>
@@ -20074,6 +20376,13 @@
 <td>2005</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Complete K Chronicles</td>
+<td>2008</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20102,6 +20411,13 @@
 <td>2004</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Complete Pip And Norton</td>
+<td>2002</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20545,6 +20861,13 @@
 </tr>
 
 <tr>
+<td>Courageous Princess</td>
+<td>2007</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Couscous Express</td>
 <td>2001</td>
 <td>AIT Planet Lar</td>
@@ -20626,6 +20949,13 @@
 <td>2012</td>
 <td>Oni</td>
 <td><a href="OniPress/OniPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Coutoo</td>
+<td>1994</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20881,6 +21211,13 @@
 </tr>
 
 <tr>
+<td>Cravan</td>
+<td>2005</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crawl To Me</td>
 <td>2011</td>
 <td>IDW</td>
@@ -20986,6 +21323,13 @@
 </tr>
 
 <tr>
+<td>Creep</td>
+<td>2012</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Creeps</td>
 <td>2001</td>
 <td>Image</td>
@@ -21011,6 +21355,13 @@
 <td>1964</td>
 <td>Warren</td>
 <td><a href="Creepy/Creepy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Creepy</td>
+<td>2009</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21305,6 +21656,13 @@
 <td>2010</td>
 <td>Archaia</td>
 <td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Critical Role: Vox Machina Origins</td>
+<td>2019</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21700,6 +22058,13 @@
 </tr>
 
 <tr>
+<td>Cryptocracy</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cryptozoic Man</td>
 <td>2013</td>
 <td>Dynamite</td>
@@ -21777,6 +22142,13 @@
 </tr>
 
 <tr>
+<td>Cud Comics</td>
+<td>1995</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cuda</td>
 <td>1998</td>
 <td>Avatar</td>
@@ -21809,6 +22181,13 @@
 <td>2019</td>
 <td>Public Affairs</td>
 <td><a href="CultOfTheDeadCow/CultOfTheDeadCow.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cuphead</td>
+<td>2020</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21937,6 +22316,13 @@
 </tr>
 
 <tr>
+<td>Cut</td>
+<td>2007</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cutter</td>
 <td>2014</td>
 <td>Image</td>
@@ -22032,6 +22418,13 @@
 <td>1989</td>
 <td>Innovation</td>
 <td><a href="Innovation/Innovation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cyberpunk 2077: Trauma Team</td>
+<td>2020</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22421,6 +22814,13 @@
 </tr>
 
 <tr>
+<td>Dance Of Lifey Death</td>
+<td>1994</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dance Party DOA</td>
 <td>1993</td>
 <td>Slave Labor</td>
@@ -22575,6 +22975,13 @@
 </tr>
 
 <tr>
+<td>Dare Detectives</td>
+<td>2004</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dare The Impossible</td>
 <td>1991</td>
 <td>Fleetway Quality</td>
@@ -22663,6 +23070,13 @@
 <td>1987</td>
 <td>Darkline</td>
 <td><a href="DarklinePublications/DarklinePublications.html">Details</a><td>
+</tr>
+
+<tr>
+<td>Dark Ages</td>
+<td>2014</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22848,10 +23262,24 @@
 </tr>
 
 <tr>
+<td>Dark Horse New Recruits</td>
+<td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dark Horse Presents</td>
 <td>1986</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorsePresents/DarkHorsePresents.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Horse Presents Fifth Anniversary Special</td>
+<td>1991</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22866,6 +23294,13 @@
 <td>1986</td>
 <td>DC</td>
 <td><a href="DarkKnightReturns/DarkKnightReturns.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Matter</td>
+<td>2012</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23617,6 +24052,13 @@
 </tr>
 
 <tr>
+<td>Dead Inside</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dead Irons</td>
 <td>2009</td>
 <td>Dynamite</td>
@@ -23694,6 +24136,13 @@
 </tr>
 
 <tr>
+<td>Dead Rider</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dead Rising: Road To Fortune</td>
 <td>2011</td>
 <td>IDW</td>
@@ -23729,6 +24178,20 @@
 </tr>
 
 <tr>
+<td>Dead To Rights</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dead Vengeance</td>
+<td>2015</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dead Who Walk</td>
 <td>1952</td>
 <td>Avon</td>
@@ -23747,6 +24210,13 @@
 <td>2000</td>
 <td>Vertigo</td>
 <td><a href="Deadenders/Deadenders.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Deadface: Doing The Islands With Bacchus</td>
+<td>1991</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23787,6 +24257,13 @@
 <tr>
 <td>Deadline USA</td>
 <td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Deadlock</td>
+<td>2009</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
@@ -23950,6 +24427,20 @@
 <td>2017</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Death Head</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Death Orb</td>
+<td>2018</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24219,6 +24710,13 @@
 </tr>
 
 <tr>
+<td>Decapitator</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Deceivers</td>
 <td>2013</td>
 <td>Boom!</td>
@@ -24244,6 +24742,13 @@
 <td>1970</td>
 <td>Kitchen Sink</td>
 <td><a href="KitchenSinkPress/KitchenSinkPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Deep Gravity</td>
+<td>2014</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -72941,7 +73446,7 @@
 </tr>
 
 <tr>
-<td>Supernatural: Origins<td>
+<td>Supernatural: Origins</ td>
 <td>2007</td>
 <td>Wildstorm</td>
 <td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
