Dark Horse Index

--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -965,13 +965,21 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse521.jpg">Freak Show (the Residents)</a> (1992)
 <li><a href="Darkhorse129.jpg">Freaks' Amour</a> (1992)
 <li><a href="Darkhorse130.jpg">Freaks Of The Heartland</a> (2004)
+<li><a href="Darkhorse522.jpg">Furious</a> (2014)
 <li><a href="Darkhorse131.jpg">Fused</a> (2004)
 <li><a href="Darkhorse132.jpg">Galactic</a> (2003)
 <li><a href="Darkhorse133.jpg">Gamera</a> (1996)
+<li><a href="Darkhorse523.jpg">Gantz</a> (2008)
 <li><a href="Darkhorse134.jpg">Gary Gianni's The MonsterMen</a> (1999)
+<li><a href="Darkhorse524.jpg">Gasoline Alley: The Complete Sundays</a> (2014)
+<li><a href="Darkhorse525.jpg">Gate 7</a> (2014)
+<li><a href="Darkhorse526.jpg">Gear School</a> (2007)
 <li><a href=../Ghost/Ghost.html">Ghost</a> (1998)
+<li><a href="Darkhorse527.jpg">Ghost / Batgirl</a> (2000)
 <li><a href="Darkhorse135.jpg">Ghost in The Shell</a> (1995)
+<li><a href="Darkhorse528.jpg">GI Joe</a> (1995)
 <li><a href="Darkhorse136.jpg">Gigantic</a> (2017)
+<li><a href="Darkhorse529.jpg">Giles</a> (2018)
 <li><a href="Darkhorse137.jpg">Girl Crazy</a> (1996)
 <li><a href="../GiveMeLiberty/GiveMeLiberty.html">Give Me Liberty</a> (1991)
 <li><a href="../GoBoy7/GoBoy7.html">Go Boy 7</a> (2004)
@@ -983,6 +991,8 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse141.jpg">Green River Killer</a> (2011)
 <li><a href="../GrendelDH/GrendelDH.html">Grendel</a> (1989)
 <li><a href="Darkhorse142.jpg">Grifter and The Mask</a> (1996)
+<li><a href="Darkhorse530.jpg">Groo Vs Conan</a> (2014)
+<li><a href="Darkhorse531.jpg">Groo: Fray Of The Gods</a> (2016)
 <li><a href="Darkhorse143.jpg">Guild</a> (2010)
 <li><a href="Darkhorse144.jpg">Halo: Escalation</a> (2015)
 <li><a href="Darkhorse145.jpg">Halo: Initiation</a> (2013)
@@ -1047,6 +1057,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse178.jpg">Legend Of Korra</a> (2017)
 <li><a href="../LegendOfMotherSarah/LegendOfMotherSarah.html">Legend Of Mother Sarah</a> (1995)
 <li><a href="../LetMeInCrossroads/LetMeInCrossroads.html">Let Me In: Crossroads</a> (2011)
+<li><a href="../LittleAnnieFanny/LittleAnnieFanny.html">Little Annie Fanny</a> (2000)
 <li><a href="Darkhorse179.jpg">Living with The Dead</a> (2007)
 <li><a href="../LobsterJohnson/LobsterJohnson.html">Lobster Johnson</a> (2008)
 <li><a href="Darkhorse180.jpg">Lone</a> (2004)
@@ -1059,8 +1070,8 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse186.jpg">Machine</a> (1995)
 <li><a href="../Madman/Madman.html">Madman</a> (2000)
 <li><a href="Darkhorse187.jpg">Magic: The Gathering</a>(1998)
-<li><a href="Darkhorse188.jpg">Manga Darkchylde</a> (2005)
 <li><a href="../ManWithTheScreamingBrain/ManWithTheScreamingBrain.html">Man with The Screaming Brain</a> (2005)
+<li><a href="Darkhorse188.jpg">Manga Darkchylde</a> (2005)
 <li><a href="Darkhorse189.jpg">Mark</a> (1987)
 <li><a href="Darkhorse190.jpg">Marshal Law</a> (1992)
 <li><a href="Darkhorse191.jpg">Martha Washington: Dies</a> (2007)
@@ -1081,7 +1092,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../MilkmanMurders/MilkmanMurders.html">Milkman Murders</a> (2004)
 <li><a href="../MindMgmt/MindMgmt.html">MIND MGMT</a> (2015)
 <li><a href="Darkhorse346.jpg">Monkey King</a> (2005)
-<li><a href="Darkhorse198.jpg">Monkeyman &amp;O'Brien</a> (1996)
+<li><a href="Darkhorse198.jpg">Monkeyman &amp; O'Brien</a> (1996)
 <li><a href="../Moth/Moth.html">Moth</a> (2004)
 <li><a href="../Motorhead/Motorhead.html">Motorhead</a> (1996)
 <li><a href="Darkhorse199.jpg">My Name Is Bruce</a> (2008)
@@ -1130,6 +1141,8 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse231.jpg">Primal</a> (1992)
 <li><a href="Darkhorse232.jpg">Propellerman</a> (1993)
 <li><a href="Darkhorse233.jpg">Pubo</a> (2003)
+<li><a href="Darkhorse240.jpg">R.I.P.D.</a> (2000)
+<li><a href="../Rage/Rage.html">Rage</a> (2011)
 <li><a href="Darkhorse234.jpg">Rascals in Paradise</a> (1994)
 <li><a href="Darkhorse353.jpg">Rasputin The Voice Of The Dragon</a> (2018)
 <li><a href="Darkhorse235.jpg">Real Adventures Of Jonny Quest</a> (1997)
@@ -1141,7 +1154,6 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse237.jpg">Rex Mundi</a> (2009)
 <li><a href="Darkhorse238.jpg">Ring Of Roses</a> (1992)
 <li><a href="Darkhorse239.jpg">Ring Of The Nibelung</a> (2000)
-<li><a href="Darkhorse240.jpg">R.I.P.D.</a> (2000)
 <li><a href="Darkhorse241.jpg">Ripley's Believe It or Not!</a> (2002)
 <li><a href="Darkhorse242.jpg">Roachmill</a> (1990)
 <li><a href="Darkhorse243.jpg">RoboCop</a> (1993)
@@ -1165,6 +1177,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse259.jpg">Shadow and Doc Savage</a> (1995)
 <li><a href="Darkhorse260.jpg">Shadow and The Mysterious 3</a> (1994)
 <li><a href="Darkhorse261.jpg">Shadow: In The Coils Of The Leviathan</a> (1994)
+<li><a href="../ShaolinCowboy/ShaolinCowboy.html">Shaolin Cowboy</a> (2013)
 <li><a href="Darkhorse262.jpg">Shi: Ju-Nen</a> (2005)
 <li><a href="Darkhorse263.jpg">Shinobi</a> (2002)
 <li><a href="Darkhorse264.jpg">Shrek</a> (2003)
