--- a/Marvel/Marvel.html
+++ b/Marvel/Marvel.html
@@ -823,6 +823,7 @@ Previous Titles:
 <li>Squadron Supreme: Hyperion vs. Nighthawk    (2007)
 <li>Star Brand  (1986)
 <li>Star Brand and Nightmask    (2016)
+<li><a href="../MarvelStarWars/MarvelStarWars.html">Star Wars</a> (1977)
 <li>Starblast   (1994)
 <li>Starjammers     (1995)
 <li>Starlord    (1996)
