--- a/Sparkler/Sparkler.html
+++ b/Sparkler/Sparkler.html
@@ -10,7 +10,7 @@
 <body>
 <img src="Sparkler1.jpg"> <br>
 Series: 2 issues 1940, 120 issues 1942 - 1954<br>
-Publisher: Vertigo (DC)<br>
+Publisher: <a href="../UnitedFeature/UnitedFeature.html">United Feature</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
