--- a/Marvel/Marvel.html
+++ b/Marvel/Marvel.html
@@ -162,7 +162,7 @@ Previous Titles:
 <li><a href="../AllNewInvaders/AllNewInvaders.html">All New Invaders</a> (2014)
 <li><a href="../AllNewIronman/AllNewIronman.html">All New Iron Manual</a> (2008)
 <li><a href="../AllNewMarvelNow/AllNewMarvelNow.html">All New  NOW Previews</a> (2012)
-<li><a href="../AllNewHandbook/AllNewHandbook.html">All New Handbook of the  Universe</a> (2006)
+<li><a href="../AllNewHandbook/AllNewHandbook.html">All New Handbook of the Marvel Universe</a> (2006)
 <li><a href="../AllNewSheHulk/AllNewSheHulk.html">All New Savage She-Hulk</a> (2009)
 <li><a href="../AllNewUltimates/AllNewUltimates.html">All New Ultimates</a> (2014)
 <li><a href="../AllNewWolverine/AllNewWolverine.html">All New Wolverine</a> (2015)
@@ -172,85 +172,85 @@ Previous Titles:
 <li><a href="../AmazingFantasy/AmazingFantasy.html">Amazing Adult Fantasy</a> (1961)
 <li><a href="../AmazingFantasy/AmazingFantasy.html">Amazing Adventures</a>  (1961)
 <li><a href="../AmazingDetective/AmazingDetective.html">Amazing Detective Cases</a> (1950)
-<li>Amazing Fantasy     (1961)
-<li>Amazing High Adventure  (1984)
-<li>Amazing Scarlet Spider  (1995)
-<li>Amazing Spider-Girl     (2006)
-<li>Amazing Spider-Man  (1963)
-<li>American Dream  (2008)
-<li>An American Tail: Fievel Goes West  (1991)
-<li>Angela Asgard's Assassin    (2014)
-<li>Angela Queen of Hel     (2015)
-<li>Animax  (1986)
-<li>Annex   (1994)
-<li>Annihilation    (2006)
-<li>Annihilators    (2011)
-<li>Ant-Man     (2015)
-<li>Ant-Man & Wasp  (2010)
-<li>Apache Skies    (2000)
-<li>Arana The Heart of the Spider   (2005)
-<li>Archangel   (1996)
-<li>Ares    (2006)
-<li>Arrgh!  (1974)
-<li>Astonishing Ant-Man     (2015)
-<li>Astonishing Spider-Man & Wolverine  (2010)
-<li>Astonishing Tales   (1970)
-<li>Astonishing Thor    (2011)
-<li>Atomic Age  (1995)
-<li>Avataars: Covenant of the Shield    (2000)
-<li>Avengers    (1963)
-<li>Avengers & the Infinity Gauntlet    (2010)
-<li>Avengers 1959   (2011)
-<li>Avengers/Invaders   (2008)
-<li>Avengers/Ultraforce     (1995)
-<li>AVX: Consequences   (2012)
-<li>Balder the Brave    (1985)
-<li>Banner  (2001)
-<li>Battle Scars    (2012)
-<li>Battletide  (1992)
-<li>Battletide II   (1993)
-<li>Beast   (1997)
-<li>Beauty And The Beast    (1984)
-<li>Before the Fantastic 4: Grimm and Logan     (2000)
-<li>Biker Mice from Mars    (1993)
-<li>Bishop  (1994)
-<li>Bizarre Adventures  (1981)
-<li>Black Bolt  (2017)
-<li>Black Goliath   (1976)
-<li>Black Knight    (2016)
-<li>Black Panther   (1977)
-<li>Black Widow     (1999)
-<li>Blackwulf   (1994)
-<li>Blade   (1973)
-<li>Blaze   (1994)
-<li>Blaze Carson    (1948)
-<li>Blaze of Glory  (2000)
-<li>Blink   (2001)
-<li>Blonde Phantom  (1946)
-<li>Bloodseed   (1993)
-<li>Bloodstone  (2001)
-<li>Blueberry   (1989)
-<li>Bob Marley, Tale of the Tuff Gong   (1994)
-<li>Book of the Dead    (1993)
-<li>Brand Echh  (1967)
-<li>Brotherhood     (2001)
-<li>Brute Force     (1990)
-<li>Bullet Points   (2007)
-<li>Bullseye: Greatest Hits     (2004)
-<li>Cable   (1993)
-<li>Cable and Deadpool  (2004)
-<li>Cable and X-Force   (2012)
-<li>Cage    (1992)
-<li>Call of Duty 911    (2002)
-<li>Camp Candy  (1990)
-<li>Captain Britain     (1976)
-<li>Captain Justice     (1988)
-<li>Captain     (1968)
-<li>Captain  and the Carol Corps    (2015)
-<li>Captain Planet and the Planeteers   (1991)
-<li>Captain Universe    (2006)
-<li>Casey, Crime Photographer   (1949)
-<li>Cat     (1972)
+<li><a href="../AmazingFantasy/AmazingFantasy.html">Amazing Fantasy</a> (1961)
+<li><a href="../AmazingHighAdventure/AmazingHighAdventure.html">Amazing High Adventure</a>  (1984)
+<li><a href="../AmazingScarletSpider/AmazingScarletSpider.html">Amazing Scarlet Spider</a> (1995)
+<li><a href="../AmazingSpidergirl/AmazingSpidergirl.html">Amazing Spider-Girl</a> (2006)
+<li><a href="../AmazingSpider-Man/AmazingSpiderman.html">Amazing Spider-Man</a>  (1963)
+<li><a href="../AmericanDream/AmericanDream.html">American Dream</a>  (2008)
+<li><a href="../AnAmericanTail/AnAmericanTail.html">An American Tail: Fievel Goes West</a>  (1991)
+<li><a href="../AngelaAsgardAssassin/AngelaAsgardAssassin.html">Angela Asgard's Assassin</a> (2014)
+<li><a href="../AngelaQueenOfHel/AngelaQueenOfHel.html">Angela Queen of Hel</a>     (2015)
+<li><a href="../Animax/Animax.html">Animax</a>  (1986)
+<li><a href="../Annex/Annex.html">Annex</a>   (1994)
+<li><a href="../Annihilation/Annihilation.html">Annihilation</a> (2006)
+<li><a href="../Annihilators/Annihilators.html">Annihilators</a> (2011)
+<li><a href="../Ant-Man/Ant-Man.html">Ant-Man</a> (2015)
+<li><a href="../AntmanWasp/AntmanWasp.html">Ant-Man & Wasp</a> (2010)
+<li><a href="../ApacheSkies/ApacheSkies.html">Apache Skies</a> (2000)
+<li><a href="../AranaTheHeartOfTheSpider/AranaTheHeartOfTheSpider.html">Arana The Heart of the Spider</a> (2005)
+<li><a href="../Archangel/Archangel.html">Archangel</a> (1996)
+<li><a href="../Ares/Ares.html">Ares</a>    (2006)
+<li><a href="../Arrgh/Arrgh.html">Arrgh!</a>  (1974)
+<li><a href="../AstonishingAntMan/AstonishingAntMan.html">Astonishing Ant-Man</a> (2015)
+<li><a href="../AstonishingSpidermanWolverine/AstonishingSpidermanWolverine.html">Astonishing Spider-Man & Wolverine</a>  (2010)
+<li><a href="../AstonishingTales/AstonishingTales.html">Astonishing Tales</a>   (1970)
+<li><a href="../AstonishingThor/AstonishingThor.html">Astonishing Thor</a>   (2011)
+<li><a href="../AtomicAge/AtomicAge.html">Atomic Age</a>  (1995)
+<li><a href="../Avataars/Avataars.html">Avataars: Covenant of the Shield</a> (2000)
+<li><a href="../Avengers/Avengers.html">Avengers</a> (1963)
+<li><a href="../AvengersInfinityGauntlet/AvengersInfinityGauntlet.html">Avengers & the Infinity Gauntlet</a> (2010)
+<li><a href="../Avengers1959/Avengers1959.html">Avengers 1959</a> (2011)
+<li><a href="../AvengersInvaders/AvengersInvaders.html">Avengers/Invaders</a> (2008)
+<li><a href="../AvengersUltraforce/AvengersUltraforce.html">Avengers/Ultraforce</a>  (1995)
+<li><a href="../AVX/AVX.html">AVX: Consequences</a> (2012)
+<li><a href="../BalderTheBrave/BalderTheBrave.html">Balder the Brave</a> (1985)
+<li><a href="../Banner/Banner.html">Banner</a> (2001)
+<li><a href="../BattleScars/BattleScars.html">Battle Scars</a> (2012)
+<li><a href="../Battletide/Battletide.html">Battletide</a>  (1992)
+<li><a href="../BattletideII/BattletideII.html">Battletide II</a> (1993)
+<li><a href="../Beast/Beast.html">Beast</a> (1997)
+<li><a href="../BeautyAndTheBeast/BeautyAndTheBeast.html">Beauty And The Beast</a>   (1984)
+<li><a href="../BeforeFantasticFour/BeforeFantasticFour.html">Before the Fantastic 4: Grimm and Logan</a> (2000)
+<li><a href="../BikerMiceMars/BikerMiceMars.html">Biker Mice from Mars</a>    (1993)
+<li><a href="../Bishop/Bishop.html">Bishop</a>  (1994)
+<li><a href="../BizarreAdventures/BizarreAdventures.html">Bizarre Adventures</a>  (1981)
+<li><a href="../BlackBolt/BlackBolt.html">Black Bolt</a>  (2017)
+<li><a href="../BlackGoliath/BlackGoliath.html">Black Goliath</a>   (1976)
+<li><a href="../BlackKnight/BlackKnight.html">Black Knight</a>    (2016)
+<li><a href="../BlackPanther/BlackPanther.html">Black Panther</a>   (1977)
+<li><a href="../BlackWidow/BlackWidow.html">Black Widow</a> (1999)
+<li><a href="../Blackwulf/Blackwulf.html">Blackwulf</a> (1994)
+<li><a href="../Blade/Blade.html">Blade</a> (1973)
+<li><a href="../Blaze/Blaze.html">Blaze</a> (1994)
+<li><a href="../Gunhawk/Gunhawk.html">Blaze Carson</a> (1948)
+<li><a href="../BlazeOfGlory/BlazeOfGlory.html">Blaze of Glory</a>  (2000)
+<li><a href="../Blink/Blink.html">Blink</a>   (2001)
+<li><a href="../BlondePhantom/BlondePhantom.html">Blonde Phantom</a>  (1946)
+<li><a href="../Bloodseed/Bloodseed.html">Bloodseed</a>   (1993)
+<li><a href="../Bloodstone/Bloodstone.html">Bloodstone</a>  (2001)
+<li><a href="../Blueberry/Blueberry.html">Blueberry</a>  (1989)
+<li><a href="../BobMarley/BobMarley.html">Bob Marley, Tale of the Tuff Gong</a> (1994)
+<li><a href="../BookOfTheDead/BookOfTheDead.html">Book of the Dead</a>  (1993)
+<li><a href="../BrandEchh/BrandEchh.html">Brand Echh</a>  (1967)
+<li><a href="../Brotherhood/Brotherhood.html">Brotherhood</a> (2001)
+<li><a href="../BruteForce/BruteForce.html">Brute Force</a> (1990)
+<li><a href="../BulletPoints/BulletPoints.html">Bullet Points</a> (2007)
+<li><a href="../Bullseye/Bullseye.html">Bullseye: Greatest Hits</a> (2004)
+<li><a href="../Cable/Cable.html">Cable</a> (1993)
+<li><a href="../CableAndDeadpool/CableAndDeadpool.html">Cable and Deadpool</a> (2004)
+<li><a href="../CableAndXForce/CableAndXForce.html">Cable and X-Force</a> (2012)
+<li><a href="../Cage/Cage.html">Cage</a> (1992)
+<li><a href="../CallOfDuty911/CallOfDuty911.html">Call of Duty 911</a> (2002)
+<li><a href="../CampCandy/CampCandy.html">Camp Candy</a>  (1990)
+<li><a href="../CaptainBritain/CaptainBritain.html">Captain Britain</a> (1976)
+<li><a href="../CaptainJustice/CaptainJustice.html">Captain Justice</a> (1988)
+<li><a href="../CaptainMarvel/CaptainMarvel.html">Captain Marvel</a> (1968)
+<li><a href="../CaptMarvelCarolCorps/CaptMarvelCarolCorps.html">Captain Marvel and the Carol Corps</a> (2015)
+<li><a href="../CaptainPlanet/CaptainPlanet.html">Captain Planet and the Planeteers</a>   (1991)
+<li><a href="../CaptainUniverse/CaptainUniverse.html">Captain Universe</a> (2006)
+<li><a href="../CaseyCrimePhotographer/CaseyCrimePhotographer.html">Casey, Crime Photographer   (1949)
+<li><a href="../Cat/Cat.html">Cat</a> (1972)
 <li>Chamber of Darkness     (1969)
 <li>Champions   (1975)
 <li>Children of the Voyager     (1993)
